@@ -3,4 +3,5 @@
         ring/ring-jetty-adapter {:mvn/version "1.13.0"}
         com.ovistoica/ring-nexus-middleware {:local/root "../"}
         metosin/reitit {:mvn/version "0.9.1"}
-        hato/hato {:mvn/version "1.1.0-SNAPSHOT"}}}
+        hato/hato {:mvn/version "1.1.0-SNAPSHOT"}
+        com.datomic/peer {:mvn/version "1.0.7364"}}}
